# forum_project

./: pyproject.toml
forum/: forms.py  models.py  urls.py  views.py
forum/migrations/: 0001_initial.py  0002_post_image_comment.py  0003_post_author.py  0004_alter_post_author.py  0005_profile.py  0006_post_hashtags.py
forum/static/css/: header_style.css  styles.css
forum/static/js/: scripts.js
forum/templates/: bookmarks.css  bookmarks.html  include_menu.html  index.html  my_posts.html  my_settings.css  my_settings.html  notifications.html  register_login.css  register_login.html  search.html  style.css  subscriptions.html
forum/templates/forum/: add_post.html  header.html  index.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html  update_post.html  user_posts.html
myforum/: asgi.py  settings.py  wsgi.py
notes/: plan.md  plan_2.md
