[tool.poetry]
name = "forum_project"
version = "0.1.0"
description = "A Django forum project"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"